Integrate Fubon Securities SDK with Panama FFI
新增富邦證券 SDK 整合，使用 Java 25 Panama FFI 進行 native library 綁定。

變更項目：

**Native FFI 基礎設施**
- 新增 native/ 目錄結構和 git submodule (fubon-sdk-ffi)
- 新增編譯腳本：build-native.sh, generate-bindings.sh, check-env.sh
- 更新 .gitignore 排除編譯產物

**專案配置**
- deps.edn：新增 core.async 依賴，設定 JVM library path
- build.clj：新增 compile-java 任務編譯 Java bindings
- config.clj：支援 EXTRA_CONFIG_PATH 環境變數
- resources/config.edn：新增 fubon SDK 配置

**開發環境**
- dev/user.clj：更新 reload hooks 處理有狀態組件
- portal.clj：改進 Portal 整合
- core.clj：整合 Fubon SDK lifecycle

**文檔**
- README.md：大幅擴充環境需求、設定流程、使用範例
- claude.md：更新開發原則和狀態管理指南

Co-Authored-By: Claude Sonnet 4.5 <noreply@anthropic.com>